fix overflow on y within hero on ios

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -57,10 +57,6 @@ h2 {
   color: black;
 }
 
-section {
-  position: relative;
-}
-
 p {
   margin: unset;
   font-size: var(--step-5);
@@ -81,8 +77,7 @@ p {
 .layout-cover {
   display: flex;
   flex-direction: column;
-  min-block-size: 100vh;
-  max-block-size: 100vh;
+  block-size: 100vh;
   padding-block: var(--space-s);
 
   & > * {
